--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -50,21 +50,30 @@
         let speaking = false;
 
         // Inicializar interação com mensagem inicial
-        async function initializeConversation() {
-            try {
-                const response = await fetch('/api/start');
-                const data = await response.json();
+      async function initializeConversation() {
+    try {
+        const response = await fetch('/api/start');
+        const data = await response.json();
+        messageElement.innerText = data.response;
 
-                // Exibir mensagem inicial personalizada
-                messageElement.innerText = data.response;
-
-                // Falar mensagem inicial
-                speak(data.response);
-            } catch (error) {
-                console.error("Error initializing the conversation:", error);
-                messageElement.innerText = "Error initializing the conversation.";
+        // Certificar que o robô fale a mensagem inicial
+        const waitForVoices = new Promise((resolve) => {
+            const synth = window.speechSynthesis;
+            const voices = synth.getVoices();
+            if (voices.length) {
+                resolve();
+            } else {
+                synth.onvoiceschanged = resolve;
             }
-        }
+        });
+
+        await waitForVoices; // Esperar as vozes carregarem
+        speak(data.response);
+    } catch (error) {
+        console.error("Error initializing the conversation:", error);
+        messageElement.innerText = "Error initializing the conversation.";
+    }
+}
 
         // Função para o robô falar
         function speak(text) {
