--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -49,37 +49,51 @@
         let recognition;
         let speaking = false;
 
-        // Inicializar interação com mensagem inicial
-      async function initializeConversation() {
+       async function initializeConversation() {
     try {
         const response = await fetch('/api/start');
         const data = await response.json();
         messageElement.innerText = data.response;
 
-        // Certificar que o robô fale a mensagem inicial
+        // Forçar carregamento das vozes antes de falar
         const waitForVoices = new Promise((resolve) => {
             const synth = window.speechSynthesis;
-            const voices = synth.getVoices();
-            if (voices.length) {
+            if (synth.getVoices().length > 0) {
                 resolve();
             } else {
                 synth.onvoiceschanged = resolve;
             }
         });
 
-        await waitForVoices; // Esperar as vozes carregarem
-        speak(data.response);
+        await waitForVoices; // Garantir que as vozes estão carregadas
+        speak(data.response); // Falar a mensagem inicial
     } catch (error) {
         console.error("Error initializing the conversation:", error);
         messageElement.innerText = "Error initializing the conversation.";
     }
 }
 
-        // Função para o robô falar
-        function speak(text) {
-            const synth = window.speechSynthesis;
-            let voices = synth.getVoices();
-            let alertDisplayed = false;
+// Função para o robô falar
+function speak(text) {
+    const synth = window.speechSynthesis;
+    const voices = synth.getVoices();
+    const selectedVoice = voices.find((voice) => voice.lang === "en-US") || null;
+
+    // Criar e configurar a fala
+    const utterance = new SpeechSynthesisUtterance(text);
+    utterance.lang = "en-US";
+    utterance.voice = selectedVoice;
+
+    utterance.onstart = () => {
+        robotImg.src = ROBOT_GIF; // Ativa GIF
+    };
+
+    utterance.onend = () => {
+        robotImg.src = ROBOT_STATIC; // Volta ao estático
+    };
+
+    synth.speak(utterance);
+}
 
             // Cancela qualquer síntese de fala anterior
             synth.cancel();
