--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -51,8 +51,11 @@
 
        async function initializeConversation() {
     try {
+        console.log("Fetching initial conversation...");
         const response = await fetch('/api/start');
         const data = await response.json();
+        console.log("Received data:", data);
+
         messageElement.innerText = data.response;
 
         // Forçar carregamento das vozes antes de falar
@@ -66,6 +69,7 @@
         });
 
         await waitForVoices; // Garantir que as vozes estão carregadas
+        console.log("Vozes carregadas, iniciando fala...");
         speak(data.response); // Falar a mensagem inicial
     } catch (error) {
         console.error("Error initializing the conversation:", error);
