--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -58,7 +58,7 @@
 
         messageElement.innerText = data.response;
 
-        // Forçar carregamento das vozes antes de falar
+        // Garantir carregamento de vozes antes de falar
         const waitForVoices = new Promise((resolve) => {
             const synth = window.speechSynthesis;
             if (synth.getVoices().length > 0) {
@@ -68,9 +68,9 @@
             }
         });
 
-        await waitForVoices; // Garantir que as vozes estão carregadas
+        await waitForVoices;
         console.log("Vozes carregadas, iniciando fala...");
-        speak(data.response); // Falar a mensagem inicial
+        speak(data.response);
     } catch (error) {
         console.error("Error initializing the conversation:", error);
         messageElement.innerText = "Error initializing the conversation.";
@@ -83,17 +83,16 @@ function speak(text) {
     const voices = synth.getVoices();
     const selectedVoice = voices.find((voice) => voice.lang === "en-US") || null;
 
-    // Criar e configurar a fala
     const utterance = new SpeechSynthesisUtterance(text);
     utterance.lang = "en-US";
     utterance.voice = selectedVoice;
 
     utterance.onstart = () => {
-        robotImg.src = ROBOT_GIF; // Ativa GIF
+        robotImg.src = ROBOT_GIF;
     };
 
     utterance.onend = () => {
-        robotImg.src = ROBOT_STATIC; // Volta ao estático
+        robotImg.src = ROBOT_STATIC;
     };
 
     synth.speak(utterance);
