--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -81,18 +81,25 @@
         function speak(text) {
             const synth = window.speechSynthesis;
             const voices = synth.getVoices();
-            const selectedVoice = voices.find((voice) => voice.lang === "en-US") || null;
+            let selectedVoice = voices.find((voice) => voice.lang === "en-US");
+
+            if (!selectedVoice) {
+                console.warn("Voz 'en-US' não encontrada. Usando a primeira voz disponível.");
+                selectedVoice = voices[0]; // Usar a primeira voz disponível como fallback
+            }
+
+            console.log("Usando voz:", selectedVoice ? selectedVoice.name : "Nenhuma voz disponível.");
 
             const utterance = new SpeechSynthesisUtterance(text);
-            utterance.lang = "en-US";
+            utterance.lang = selectedVoice ? selectedVoice.lang : "en-US";
             utterance.voice = selectedVoice;
 
             utterance.onstart = () => {
-                robotImg.src = ROBOT_GIF; // Ativa GIF
+                robotImg.src = ROBOT_GIF;
             };
 
             utterance.onend = () => {
-                robotImg.src = ROBOT_STATIC; // Volta ao estático
+                robotImg.src = ROBOT_STATIC;
             };
 
             synth.speak(utterance);
