--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -49,33 +49,39 @@
         let recognition;
 
         // Inicializar conversa
-        async function initializeConversation() {
-            try {
-                console.log("Fetching initial conversation...");
-                const response = await fetch('/api/start');
-                const data = await response.json();
-                console.log("Received data:", data);
+async function initializeConversation() {
+    try {
+        console.log("Fetching initial conversation...");
+        const response = await fetch('/api/start');
+        const data = await response.json();
+        console.log("Received data:", data);
 
-                messageElement.innerText = data.response;
+        messageElement.innerText = data.response;
 
-                // Garantir que vozes estejam carregadas antes de falar
-                const waitForVoices = new Promise((resolve) => {
-                    const synth = window.speechSynthesis;
-                    if (synth.getVoices().length > 0) {
-                        resolve();
-                    } else {
-                        synth.onvoiceschanged = resolve;
-                    }
-                });
-
-                await waitForVoices;
-                console.log("Vozes carregadas, iniciando fala...");
-                speak(data.response);
-            } catch (error) {
-                console.error("Error initializing the conversation:", error);
-                messageElement.innerText = "Error initializing the conversation.";
+        // Garantir carregamento de vozes
+        const waitForVoices = new Promise((resolve) => {
+            const synth = window.speechSynthesis;
+            if (synth.getVoices().length > 0) {
+                resolve();
+            } else {
+                synth.onvoiceschanged = resolve;
             }
-        }
+        });
+
+        await waitForVoices;
+        console.log("Vozes carregadas, iniciando fala...");
+
+        // Solicitar interação do usuário para liberar o sintetizador
+        speakButton.addEventListener("click", () => {
+            speak(data.response);
+        });
+
+        messageElement.innerText = `${data.response} (Click 'Press to Speak' to hear this message.)`;
+    } catch (error) {
+        console.error("Error initializing the conversation:", error);
+        messageElement.innerText = "Error initializing the conversation.";
+    }
+}
 
         // Função para o robô falar
         function speak(text) {
