--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -50,39 +50,39 @@
         let isSpeaking = false; // Estado para rastrear se o robô está falando
 
         // Função para o robô falar
-        function speak(text) {
-            const synth = window.speechSynthesis;
-            const voices = synth.getVoices();
-            let selectedVoice = voices.find((voice) => voice.lang === "en-US");
+      function speak(text, rate = 0.5) { // Adicionado parâmetro `rate` com valor padrão 1
+    const synth = window.speechSynthesis;
+    const voices = synth.getVoices();
+    let selectedVoice = voices.find((voice) => voice.lang === "en-US");
 
-            if (!selectedVoice) {
-                console.warn("Voz 'en-US' não encontrada. Usando a primeira voz disponível.");
-                selectedVoice = voices[0]; // Fallback para a primeira voz disponível
-            }
+    if (!selectedVoice) {
+        console.warn("Voz 'en-US' não encontrada. Usando a primeira voz disponível.");
+        selectedVoice = voices[0]; // Fallback para a primeira voz disponível
+    }
 
-            console.log("Usando voz:", selectedVoice ? selectedVoice.name : "Nenhuma voz disponível.");
+    console.log("Usando voz:", selectedVoice ? selectedVoice.name : "Nenhuma voz disponível.");
 
-            const utterance = new SpeechSynthesisUtterance(text);
-            utterance.lang = selectedVoice ? selectedVoice.lang : "en-US";
-            utterance.voice = selectedVoice;
+    const utterance = new SpeechSynthesisUtterance(text);
+    utterance.lang = selectedVoice ? selectedVoice.lang : "en-US";
+    utterance.voice = selectedVoice;
+    utterance.rate = rate; // Configurar velocidade da fala
 
-            utterance.onstart = () => {
-                isSpeaking = true;
-                robotImg.src = ROBOT_GIF;
+    utterance.onstart = () => {
+        isSpeaking = true;
+        robotImg.src = ROBOT_GIF;
 
-                // Garantir que o reconhecimento de voz esteja desativado enquanto o robô fala
-                if (recognition && recognition.state === 'active') {
-                    recognition.stop();
-                }
-            };
-
-            utterance.onend = () => {
-                isSpeaking = false;
-                robotImg.src = ROBOT_STATIC;
-            };
-
-            synth.speak(utterance);
+        if (recognition && recognition.state === 'active') {
+            recognition.stop();
         }
+    };
+
+    utterance.onend = () => {
+        isSpeaking = false;
+        robotImg.src = ROBOT_STATIC;
+    };
+
+    synth.speak(utterance);
+}
 
         // Inicializar conversa
         async function initializeConversation() {
