--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Talk to Lex</title>
+    <title>Talk to Robot Lex</title>
     <style>
         body {
             text-align: center;
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1>Talk to the Robot</h1>
+    <h1>Talk to Robot Lex</h1>
     <img id="robot-img" src="../../imagens/robo1_static.png" alt="Robot">
     <p id="message" style="visibility: hidden;">Loading...</p>
     <button id="speak-button">Press to Start</button>
@@ -100,11 +100,11 @@
                     if (staticTime === 15) {
                         robotImg.src = ROBOT_ALTERNATE; // Mostrar `robo2.gif`
 
-                        // Voltar à imagem estática após 7 segundos
+                        // Voltar à imagem estática após 10 segundos
                         alternateTimeout = setTimeout(() => {
                             robotImg.src = ROBOT_STATIC;
                             staticTime = 0; // Resetar tempo estático
-                        }, 7000);
+                        }, 10000);
                     }
                 }
             }, 1000); // Verificar a cada 1 segundo
