--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talk to Robot Lex</title>
     <style>
-        body {
-            text-align: center;
+       body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            min-height: 100vh;
+            background-image: url('../../../../imagens/fundo.png');
+            background-repeat: repeat;
+            margin: 0;
+            padding: 20px;
         }
         #robot-img {
             width: 200px;
